# disrust

./: .gitpod.yml  Cargo.toml  LICENSE  README.md
examples/: hello_world_bot.rs
src/: emoji.rs  gateway.rs  getter.rs  guild.rs  lib.rs  permissions.rs  role.rs  snowflake.rs  user.rs
src/channel/: message.rs  mod.rs  text_channel.rs
src/gateway/: events.rs  intents.rs  mod.rs  packet.rs
