[package]
name = "disrust"
version = "0.1.0-alpha"
edition = "2021"
description = "Library for creating discord bots in rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/coffee-is-power/disrust"
keywords = ["discord", "rust", "bots"]
[dependencies]
# This is for communicating with the discord rest api
reqwest = {version = "0.11.*", features = ["blocking", "native-tls"]}
# This is for connecting to the discord gateway
# Discord will send events through the gateway
tokio-tungstenite = {version = "*", features = ["native-tls"]}
futures-util = "*"
serde_json = "*"
serde = {version = "*", features = ["derive"]}
tokio = { version = "*", features = ["full"] }
# Allow formatting in const variables
const_format = "*"
strum_macros = "0.24"

strum = { version = "0.24", features = ["derive"] }
lazy_static = "1.4.0"
